# place-name-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  l10n.py  pipeline.sh
.github/workflows/: rust.yml
data/: l10n.csv
demo-wasm/: index.html  package.json  vite.config.ts
demo-wasm/src/: App.tsx  index.tsx  pkg
gen-native/: Cargo.toml  build.rs
gen-native/src/: lib.rs
gen-wasm/: Cargo.toml  build.rs
gen-wasm/src/: lib.rs
warmup/: Cargo.toml  l10n.py
warmup/src/: main.rs
