[package]
name = "gen-wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8" }
wasm-bindgen = "0.2"

[build-dependencies]
csv = "1.3"
serde = { version = "1", features = ["derive"] }
